// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WarningsViews WarningsView displays nothing if no notifications 1`] = `<div />`;

exports[`WarningsViews WarningsView does displays a warning 1`] = `
<div>
  <div
    class="sc-hGPBjI jLpNLK"
  >
    <div
      class="sc-dlVxhl fwhZkz"
    >
      <div
        class="sc-kfPuZi lgMZCo"
      >
        <div
          class="sc-cxpSdN cnlYxc"
        >
          WARNING xx0
        </div>
        <h4
          class="sc-kLwhqv"
        >
          My xx1 warning
        </h4>
      </div>
      <div
        class="sc-fKVqWL"
      >
        <div
          class="sc-kfPuZi lgMZCo"
        >
          This is xx2 warning
        </div>
        <div
          class="sc-fKVqWL"
        >
          <pre
            class="sc-hiCibw jvxLJD"
          >
            EXPLAIN MATCH xx3
            <br
              class="sc-jJoQJp"
            />
                   
            ^
          </pre>
        </div>
      </div>
      <div
        class="sc-fKVqWL"
        style="margin-top: 10px;"
      >
        Status code: 
        <code
          class="sc-ZOtfp koHcGf"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`WarningsViews WarningsView does displays multiple warnings 1`] = `
<div>
  <div
    class="sc-hGPBjI jLpNLK"
  >
    <div
      class="sc-dlVxhl fwhZkz"
    >
      <div
        class="sc-kfPuZi lgMZCo"
      >
        <div
          class="sc-cxpSdN cnlYxc"
        >
          WARNING xx0
        </div>
        <h4
          class="sc-kLwhqv"
        >
          My xx1 warning
        </h4>
      </div>
      <div
        class="sc-fKVqWL"
      >
        <div
          class="sc-kfPuZi lgMZCo"
        >
          This is xx2 warning
        </div>
        <div
          class="sc-fKVqWL"
        >
          <pre
            class="sc-hiCibw jvxLJD"
          >
            EXPLAIN MATCH zz3
            <br
              class="sc-jJoQJp"
            />
                   
            ^
          </pre>
        </div>
      </div>
      <div
        class="sc-fKVqWL"
        style="margin-top: 10px;"
      >
        Status code: 
        <code
          class="sc-ZOtfp koHcGf"
        />
      </div>
    </div>
    <div
      class="sc-dlVxhl fwhZkz"
    >
      <div
        class="sc-kfPuZi lgMZCo"
      >
        <div
          class="sc-cxpSdN cnlYxc"
        >
          WARNING yy0
        </div>
        <h4
          class="sc-kLwhqv"
        >
          My yy1 warning
        </h4>
      </div>
      <div
        class="sc-fKVqWL"
      >
        <div
          class="sc-kfPuZi lgMZCo"
        >
          This is yy2 warning
        </div>
        <div
          class="sc-fKVqWL"
        >
          <pre
            class="sc-hiCibw jvxLJD"
          >
            EXPLAIN MATCH zz3
            <br
              class="sc-jJoQJp"
            />
               
            ^
          </pre>
        </div>
      </div>
      <div
        class="sc-fKVqWL"
        style="margin-top: 10px;"
      >
        Status code: 
        <code
          class="sc-ZOtfp koHcGf"
        />
      </div>
    </div>
  </div>
</div>
`;
